updated the api to allow address in the snailmailrequest. new minor version 2.2. Added service logic that uses the address if it is present instead of calling citizen to retrieve an address
