# src/main/java/se/sundsvall/snailmail/integration/db/model/RecipientEntity.java
@@ -1,7 +1,5 @@
 package se.sundsvall.snailmail.integration.db.model;
 
-import java.util.Objects;
-
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
@@ -9,17 +7,22 @@ import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.OneToOne;
 import jakarta.persistence.Table;
+
 import lombok.AllArgsConstructor;
 import lombok.Builder;
+import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import lombok.ToString;
 
 @Getter
 @Setter
-@Builder(setterPrefix = "with")
+@ToString
+@EqualsAndHashCode(exclude = "requestEntity")
 @NoArgsConstructor
 @AllArgsConstructor
+@Builder(setterPrefix = "with")
 @Entity
 @Table(name = "recipient")
 public class RecipientEntity {
@@ -53,33 +56,4 @@ public class RecipientEntity {
 	@OneToOne(mappedBy = "recipientEntity")
 	private RequestEntity requestEntity;
 
-	@Override
-	public String toString() {
-		return "RecipientEntity{" +
-			"id=" + id +
-			", givenName='" + givenName + '\'' +
-			", lastName='" + lastName + '\'' +
-			", careOf='" + careOf + '\'' +
-			", address='" + address + '\'' +
-			", apartmentNumber='" + apartmentNumber + '\'' +
-			", postalCode='" + postalCode + '\'' +
-			", city='" + city + '\'' +
-			", requestEntity=" + requestEntity +
-			'}';
-	}
-
-	@Override
-	public boolean equals(Object o) {
-		if (this == o)
-			return true;
-		if (!(o instanceof RecipientEntity that))
-			return false;
-		return Objects.equals(id, that.id) && Objects.equals(givenName, that.givenName) && Objects.equals(lastName, that.lastName) && Objects.equals(careOf, that.careOf) && Objects.equals(address, that.address) && Objects.equals(apartmentNumber,
-			that.apartmentNumber) && Objects.equals(postalCode, that.postalCode) && Objects.equals(city, that.city);
-	}
-
-	@Override
-	public int hashCode() {
-		return Objects.hash(id, givenName, lastName, careOf, address, apartmentNumber, postalCode, city);
-	}
 }
