# src/main/resources/openapi.yaml
@@ -5,9 +5,9 @@ info:
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
-  version: "2.1"
+  version: "2.2"
 servers:
-  - url: http://localhost:64948
+  - url: http://localhost:65308
     description: Generated server url
 tags:
   - name: SnailMailSender
@@ -42,14 +42,6 @@ paths:
               $ref: "#/components/schemas/SendSnailMailRequest"
         required: true
       responses:
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/Problem"
-        "200":
-          description: Successful Operation
         "400":
           description: Bad RequestEntity
           content:
@@ -58,6 +50,14 @@ paths:
                 oneOf:
                   - $ref: "#/components/schemas/Problem"
                   - $ref: "#/components/schemas/ConstraintViolation"
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "200":
+          description: Successful Operation
   /{municipalityId}/send/batch/{batchId}:
     post:
       tags:
@@ -80,14 +80,6 @@ paths:
             type: string
           example: b588d1b7-7911-4e78-89d5-b710b32e0f8e
       responses:
-        "500":
-          description: Internal Server Error
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/Problem"
-        "200":
-          description: Successful Operation
         "400":
           description: Bad RequestEntity
           content:
@@ -96,6 +88,14 @@ paths:
                 oneOf:
                   - $ref: "#/components/schemas/Problem"
                   - $ref: "#/components/schemas/ConstraintViolation"
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "200":
+          description: Successful Operation
   /api-docs:
     get:
       tags:
@@ -114,6 +114,46 @@ paths:
       x-wso2-mutual-ssl: Optional
 components:
   schemas:
+    Address:
+      type: object
+      properties:
+        firstName:
+          type: string
+          description: The first name of the recipient
+          example: John
+        lastName:
+          type: string
+          description: The last name of the recipient
+          example: Doe
+        city:
+          type: string
+          description: The city
+          example: Main Street
+        apartmentNumber:
+          type: string
+          description: The apartment number
+          example: "1101"
+        organizationNumber:
+          type: string
+          description: The organization number of the recipient
+          example: 123456-7890
+        address:
+          type: string
+          description: The address
+          example: Main Street 1
+        careOf:
+          type: string
+          description: The care of
+          example: c/o John Doe
+        zipCode:
+          type: string
+          description: The zip code
+          example: "12345"
+        country:
+          type: string
+          description: The country
+          example: Sweden
+      description: Recipient address
     Attachment:
       required:
         - name
@@ -163,11 +203,21 @@ components:
           type: string
           description: Party id for the person the letter should be sent to
           example: 6a5c3d04-412d-11ec-973a-0242ac130003
+        issuer:
+          type: string
+          description: The issuer of the request
+          example: user123
+        municipalityId:
+          type: string
+          description: The municipality id
+          example: "2281"
         attachments:
           type: array
           description: Attachments
           items:
             $ref: "#/components/schemas/Attachment"
+        address:
+          $ref: "#/components/schemas/Address"
     Problem:
       type: object
       properties:
@@ -181,20 +231,20 @@ components:
           type: object
           additionalProperties:
             type: object
+        status:
+          $ref: "#/components/schemas/StatusType"
         title:
           type: string
         detail:
           type: string
-        status:
-          $ref: "#/components/schemas/StatusType"
     StatusType:
       type: object
       properties:
+        reasonPhrase:
+          type: string
         statusCode:
           type: integer
           format: int32
-        reasonPhrase:
-          type: string
     ConstraintDescriptorObject:
       type: object
       properties:
@@ -204,6 +254,19 @@ components:
           type: object
           additionalProperties:
             type: object
+        validationAppliesTo:
+          type: string
+          enum:
+            - IMPLICIT
+            - RETURN_VALUE
+            - PARAMETERS
+        composingConstraints:
+          uniqueItems: true
+          type: array
+          items:
+            $ref: "#/components/schemas/ConstraintDescriptorObject"
+        reportAsSingleViolation:
+          type: boolean
         valueUnwrapping:
           type: string
           enum:
@@ -212,42 +275,29 @@ components:
             - SKIP
         messageTemplate:
           type: string
-        reportAsSingleViolation:
-          type: boolean
-        composingConstraints:
-          uniqueItems: true
-          type: array
-          items:
-            $ref: "#/components/schemas/ConstraintDescriptorObject"
-        validationAppliesTo:
-          type: string
-          enum:
-            - IMPLICIT
-            - RETURN_VALUE
-            - PARAMETERS
     ConstraintViolation:
       type: object
       properties:
         message:
           type: string
-        messageTemplate:
-          type: string
         propertyPath:
           $ref: "#/components/schemas/Path"
         rootBean:
-          type: object
-        executableReturnValue:
           type: object
         executableParameters:
           type: array
           items:
             type: object
+        executableReturnValue:
+          type: object
         constraintDescriptor:
           $ref: "#/components/schemas/ConstraintDescriptorObject"
         leafBean:
           type: object
         invalidValue:
           type: object
+        messageTemplate:
+          type: string
     Path:
       type: object
   securitySchemes: { }
